# rust-chat

./: .gitignore  Cargo.toml  README.md
src/: app.rs  cli.rs  main.rs
src/backend/: matrix.rs  mod.rs  p2p.rs
src/protocol/: mod.rs
